# ProjectHive

./: .gitignore  CONTRIBUTING.md  CONTRIBUTOR_TAG_EXAMPLE.md  LEADERBOARD_GUIDE.md  QUICK_START.md  README.md  agenda  interval.cpp  mnist_nn1.pth
.github/workflows/: README.md  auto-retry-failed.yml  leaderboard.yml  retry-failed-workflows.yml
Domains/AI-ML/: README.md  Roadmap.md  app.py
Domains/AI-ML/MiniProjects/: Example_AI-ML.md  HealthAI.ipynb  myMathAIAssistant.ipynb
Domains/AI-ML/MiniProjects/nyc-taxi-pipeline/: .gitignore  README.md  pyproject.toml
Domains/AI-ML/MiniProjects/nyc-taxi-pipeline/src/: extract.py  load.py  pipeline.py  transform.py
Domains/AI-ML/Starter-Templates/: Starter_AI-ML.md
Domains/AR-VR/: README.md  Roadmap.md
Domains/AR-VR/MiniProjects/: Example_AR-VR.md
Domains/AR-VR/Starter-Templates/: Starter_AR-VR.md
Domains/Backend/: README.md  Roadmap.md
Domains/Backend/MiniProjects/: Example_Backend.md  RestfulAPI_Backend.md
Domains/Backend/MiniProjects/FastAPI-CRUD-app/: .gitignore  README.md  pyproject.toml
Domains/Backend/MiniProjects/FastAPI-CRUD-app/app/: controllers.py  database.py  main.py  models.py  schemas.py
Domains/Backend/MiniProjects/rust-http-server/: Cargo.toml  README.md
Domains/Backend/MiniProjects/rust-http-server/src/: main.rs
Domains/Backend/MiniProjects/rust-http-server/src/http/: request.rs  response.rs
Domains/Backend/Starter-Templates/: ExpressTS_Backend.md  Starter_Backend.md
Domains/Blockchain/: README.md  Roadmap.md
Domains/Blockchain/MiniProjects/: BlockHire.md  Example_Blockchain.md
Domains/Blockchain/Starter-Templates/: Starter_Blockchain.md
Domains/ClimateAnalyzer/: climate.py
Domains/Cloud/: README.md  Roadmap.md
Domains/Cloud/MiniProjects/: Example_Cloud.md
Domains/CompetitiveProgramming/: QUICK_REFERENCE.md  README.md  Roadmap.md
Domains/Cybersecurity/: README.md  Roadmap.md
Domains/DevOps/: README.md  Roadmap.md
Domains/Frontend/: README.md  Roadmap.md
Domains/Frontend/pushtak/: README.md  (+3 more)
Domains/FullStack/: README.md  Roadmap.md
Domains/IoT/: README.md  Roadmap.md
Domains/MLOps/: README.md  Roadmap.md
Domains/NLP/: README.md  Roadmap.md
Domains/Robotics-Automation/: README.md  Roadmap.md
Domains/cli/MiniProjects/banking-system/: .gitignore  Cargo.toml  README.md
Domains/cli/MiniProjects/banking-system/src/: database.rs  luhn.rs  main.rs
Domains/cli/MiniProjects/banking-system/tests/: luhn_tests.rs
DomainsLeaderboards/: Overall.md
HallOfFame/: README.md
data/: jokes_dataset.csv
scripts/: testLeaderboard.js  updateLeaderboard.js
(+1280 files in other folders)
