[package]
name = "banking-system"
version = "0.1.0"
edition = "2024"
description = "A small CLI banking system (account creation, login, deletion) using SQLite persistence."
authors = ["AksharGoyal"]
license = "MIT"
readme = "README.md"
keywords = ["cli", "banking", "rust", "sqlite"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.50", features = ["derive"] }
rand = "0.9.2"
rusqlite = { version = "0.37.0", features = ["backup"] }